--- a/css/gresk.webflow.css
+++ b/css/gresk.webflow.css
@@ -1396,7 +1396,7 @@ figcaption {
   padding-right: 32px;
   padding-left: 32px;
   border-radius: 5px;
-  background-color: #80effc;
+  background-color: #fa525d;
   color: #333;
   font-size: 15px;
   font-weight: 700;
