--- a/css/gresk.webflow.css
+++ b/css/gresk.webflow.css
@@ -110,7 +110,8 @@ a.button7:active{
 }
 
 .coll{
-  width: calc(32% - 2rem);
+  /* width: calc(32% - 2rem); */
+  width: calc(25% - 2rem);
   margin: 1rem;
   cursor: pointer;
 }
@@ -1327,7 +1328,7 @@ figcaption {
 }
 
 .section.vertical-padding-large {
-  padding-top: 160px;
+  padding-top: 58px;
   padding-bottom: 160px;
 }
 
