--- a/css/gresk.webflow.css
+++ b/css/gresk.webflow.css
@@ -1,6 +1,22 @@
+@font-face{
+  src:url('font/century-gothic-font');
+  font-family: CenturyGothic;
+}
+
+@font-face{
+  src:url('font/Montserrat');
+  font-family: Montserrat;
+}
 
 
+/* process */
+.process-title{
+  font-family: 'Montserrat';
+}
 
+.process-p{
+  font-family: 'Montserrat';
+}
 .service-header{
   background-image: url('../img/40.jpeg');
    margin-top: -60px;
@@ -15,7 +31,7 @@
   margin-top: -60px;
   padding-top: 120px;
   padding-bottom: 120px;
-  background-image: url('../img/26.jpeg');
+  background-image: url('../img/a6.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -72,7 +88,7 @@
 /* button */
 .hello{
   text-align: center;
-  h;
+
 }
 
 
@@ -90,7 +106,7 @@
 	box-shadow: inset 0 -0.6em 1em -0.35 rgba(0,0,0,0.17), inset 0.06em 2em -0.3em rgba(255,255,255,0.15), inset 0 0 0em 0.05em rgba(255,255,255,0.12);
 	text-align: center;
   position: relative;
-  background-color:#fa5d5b; color:#fff; margin:77px; width: 200px;
+  background-color:#fa5d5b; color:#fff; margin:29px; width: 200px;
 }
 a.button7:active{
 	box-shadow: inset 0 0.6e, 2em -0.3em rgba(0,0,0,0.15), inset 0 0 0em 0.05em rgba(255,255,255,0.12);
@@ -358,6 +374,11 @@ a.button7:active{
   color: white;
 }
 
+.fa-whatsapp{
+  /* background: #1e3556; */
+  color: white;
+}
+
   
 /* steps */
 .steps {
@@ -398,41 +419,8 @@ height: 384px;
   margin-top: 0.5em;
 }
 
-/* dropdown for navlink */
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-/* End of dropdown */
 
 
 /* faq section */
@@ -537,7 +525,7 @@ h1{
 .nav-links {
     display: flex;
     justify-content: space-around;
-    width: 66%;
+    width: 52%;
 }
 
 .nav-links li {
@@ -545,11 +533,13 @@ h1{
 }
 
 .nav-links a {
-    color: #457B9D;
+    /* color: #457B9D; */
+    color:#FA525D;
     text-decoration: none;
-    letter-spacing: 3px;
-    font-weight: bold;
+    /* letter-spacing: 3px; */
+    /* font-weight: bold; */
     font-size: 14px;
+    font-family: 'Montserrat';
 }
 
 .burger {
@@ -642,7 +632,7 @@ h1{
 }
 
 body {
-  font-family: 'Gothic A1', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: #1D3557;
   font-size: 18px;
   line-height: 1.5;
@@ -678,7 +668,7 @@ h3 {
 h4 {
   margin-top: 10px;
   margin-bottom: 10px;
-  color: #333;
+  color: #1D3557;
   font-size: 18px;
   line-height: 1.5;
   font-weight: 700;
@@ -704,7 +694,8 @@ h6 {
 
 p {
   margin-bottom: 10px;
-  color: #181818;
+  color: #1D3557;
+  font-size: 18px;
 }
 
 a {
@@ -1086,11 +1077,11 @@ figcaption {
 }
 
 .heading-beta {
-  font-family: 'Gothic A1', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: #FA525D;
   font-size: 74px;
   line-height: 1.15;
-  font-weight: 900;
+  font-weight: 500;
 }
 
 .heading-beta.margin-bottom {
@@ -1100,12 +1091,13 @@ figcaption {
 .margin-bottom {
   display: inline-block;
   margin-bottom: 32px;
+  /* font-size: 18px; */
 }
 
 .margin-bottom.services-title {
   display: inline-block;
   border-bottom: 1px solid rgba(0, 0, 0, 0.09);
-  color: #333;
+  color: #FA525D;
   font-size: 16px;
   font-weight: 700;
 }
@@ -1116,7 +1108,7 @@ figcaption {
 
 .heading-omega {
   font-family: 'Gothic A1', sans-serif;
-  color: #333;
+  color: #1D3557;
   font-size: 46px;
   line-height: 1.15;
   font-weight: 900;
@@ -1130,14 +1122,17 @@ figcaption {
 }
 
 .heading {
-  color: #333;
+  color: #1D3557;
   font-size: 52px;
   line-height: 1.15;
+  font-family: 'Montserrat';
 }
 
 .heading-2 {
   font-size: 25px;
   line-height: 1.15;
+  /* font-family: "Gothic A1"; */
+  color:#1D3557 ;
 }
 
 .heading-3 {
@@ -1353,7 +1348,7 @@ figcaption {
 
 .section.vertical-padding-large {
   padding-top: 58px;
-  padding-bottom: 160px;
+  padding-bottom: 18px;
 }
 
 .section.padding-top-double {
@@ -1434,7 +1429,7 @@ figcaption {
 
 .pre-title {
   margin-bottom: 8px;
-  color: #457B9D;
+  color: #FA525D;
   font-size: 14px;
   font-weight: 700;
 }
@@ -1580,10 +1575,12 @@ figcaption {
 .text-span {
   font-size: 15px;
   font-weight: 900;
+  color: #1D3557;
 }
 
 .testimonial-position {
   font-size: 14px;
+  color: #1D3557;
 }
 
 .testimonial-logo {
@@ -1608,10 +1605,10 @@ figcaption {
 }
 
 .testimonial-quote {
-  margin-bottom: 40px;
-  font-family: 'Gothic A1', sans-serif;
-  color: #4b4b4b;
-  font-size: 23px;
+  margin-bottom: 114px;
+  font-family: 'Montserrat', sans-serif;
+  color: #1D3557;
+  font-size: 18px;
   line-height: 1.4;
   font-weight: 400;
 }
@@ -1645,7 +1642,7 @@ figcaption {
   border-style: none none solid;
   border-width: 1px;
   border-color: #000 #000 #c1e5e9;
-  color: #333;
+  color: #FA525D;
   font-size: 36px;
   text-decoration: none;
 }
@@ -1766,7 +1763,7 @@ figcaption {
 }
 
 .services-list {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.8;
 }
 
