--- a/css/gresk.webflow.css
+++ b/css/gresk.webflow.css
@@ -150,6 +150,27 @@ a.button7:active{
           justify-content: center;
 }
 
+@media only screen and (max-width: 768px){ 
+    .cols{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    flex-direction: column;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  .cols > .coll {
+    /* width: calc(32% - 2rem); */
+    width: auto;
+    margin: 1rem;
+    cursor: pointer;
+  }
+}
+
 .coll{
   /* width: calc(32% - 2rem); */
   width: calc(25% - 2rem);
@@ -418,6 +439,54 @@ height: 384px;
 .process-items em {
   display: block;
   margin-top: 0.5em;
+}
+
+@media only screen and (max-width: 762px) {
+    /* steps */
+  .steps {
+    background: #fa525d;
+    /* width: 100%; */
+  height: 600px; 
+  }
+
+  .process {
+    width: 800px;
+    margin: 3em auto;
+    cursor: default;
+  }
+
+  .process-items {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 0 10px;
+    padding: 0;
+    list-style-type: none;
+    color: #fff;
+    font-size: 18px;
+    text-align: center;
+  }
+  .process-items li {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    vertical-align: bottom;
+    padding: 0.6em 0.5em;
+    transform: scale(1) translateY(0);
+    transform-origin: bottom center;
+    transition: transform 0.5s;
+  }
+  /* .process-items li.active {
+    transform: scale(1) translateY(0);
+  } */
+  .process-items em {
+    display: block;
+    margin-top: 0.5em;
+  }
+
+  canvas {
+    display: none;
+  }
 }
 
 
