--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,39 @@ h1 {
 	background-size:68px 71px;
 }
   }
-/*  */
+
+  #container {
+  overflow-x: hidden;
+  margin-top: 0px;
+}
+
+/* @media screen and (max-width: 768px) {
+    #container {
+        overflow-x: hidden;
+        width: 100vw;
+    }
+  .nav-links {
+        position: fixed;
+        height: 47vh;
+        top: 12vh;
+        background-color: #fff;
+        display: hidden;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    } 
+    
+    .nav-links li {
+        opacity: 1;
+    }
+    
+    .burger {
+        display: block;
+        cursor: pointer;
+    }
+} */
 
 
 /* Text on header */
